# rifs

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: make-cicd.yaml  pylint.yml  python-build.yml
docs/: CHANGELOG.md
src/rifs/: __init__.py  transmit.py
src/rifs/core/: __init__.py  abstraction.py  constants.py  inspection.py  resolver.py  soumission.py  transmission.py
src/rifs/fixtures/: test.py
src/rifs/operations/: ruke.py
tests/: test_base_import.py  test_kwargs_inspection.py  test_object_base_kwargs.py  test_operation_script.py  test_transmit.py
