[project]
name = "rifs"
version = "0.1.0"
description = "About Python Render Interface Frameworks. Less executables, more python."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

]
requires-python = ">=3.8"
license = { file = "LICENSE" }


# Poety Setup
[tool.poetry]
description = "About Python Render Interface Frameworks. Less executables, more python."
name = "rifs"
version = "0.1.0"
authors = ["robert-v <robertvigorito@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8"


[tool.poetry.group.test.dependencies]
mypy = "^1.11.0"
ruff = "^0.5.5"
pylint = "^3.2.6"
isort = {extras = ["color"], version = "^5.13.2"}
black = "^24.4.2"
colorama = "^0.4.6"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py37, py38, py39, py310

[testenv]
allowlist_externals = poetry,echo
commands =
    pip install -U pip
    pip install . pytest
    pytest -s -rap .
"""

# Black Setup
[tool.black]
line-length = 120

# Pylint Setup
[tool.pylint]
line-length = 120

# Isort Setup
[tool.isort]
line_length = 120
profile = "black"