[project]
name = "rifs"
version = "0.1.0"
description = "About Python Render Interface Frameworks. Less executables, more python."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",


]
requires-python = ">=3.10"
license = { file = "LICENSE" }

dependencies = ["black"]

# Poety Setup
[tool.poetry]
description = "About Python Render Interface Frameworks. Less executables, more python."
name = "rifs"
version = "0.1.0"
authors = ["robert-v <robertvigorito@gmail.com>"]

[tool.poetry.dependencies]
python = " >=3.8,<4"
black = "^24.4.2"


[tool.poetry.group.test.dependencies]
mypy = "^1.11.0"
ruff = "^0.5.5"
pylint = "^3.2.6"
isort = { extras = ["color"], version = "^5.13.2" }
black = "^24.4.2"
colorama = "^0.4.6"
pytest = "^8.3.2"
pytest-sugar = "^1.0.0"
pytest-isort = "^4.0.0"
pytest-coverage = "^0.0"
tox = "^4.16.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py310,py311,py312

[testenv]
allowlist_externals = poetry,echo
commands =
    poetry install -v
    poetry run pylint ./src
    poetry run pytest
"""

# Pytest Setup
[tool.pytest]
addopts = "-s -rap"
testpaths = ["tests"]


# Black Setup
[tool.black]
line-length = 120

# Pylint Setup
[tool.pylint]
max-line-length = 120
disable = ["too-few-public-methods"]

# Isort Setup
[tool.isort]
line_length = 120
profile = "black"

[tool.mypy]
follow_imports = "normal"
